style.css
body{
    width: 100%;
    margin: 0px auto;
}
 .header {
            display: flex;
            justify-content: space-around;
            align-items: center;
            margin-top: 10px;
            margin-bottom: 10px;
        }
        #Banner_section_paragraph {margin-top: 50px;font-size: larger;}

        #menu {
            display: flex;
            justify-content: space-between;
            gap: 20px;
        }

        .registerBtn {
            color: white;
            background-color: blue;
            padding: 10px;
            font-size: bold;
            border: none;
            border-radius: 10px;
            padding: 15px 20px 15px 20px;
        }
        #bannersectionh1{
            font-size: 300%;
            font-weight: bolder;
        }
        #bannerSection {
            text-align: center;
            background-image:
                linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
                url(assets/banner.jpg);
            /* background-repeat: no-repeat; */
            background-size: cover;
            background-position: center center;
            width: 100%;
            height: 100vh;
            display: flex;
            align-items: center;
            flex-direction: column;
            padding: 30px 0px;
            /* gap: 100px; */
            justify-content: space-between;
        }

        #bannerSectionText {
            color: white;
            width: 50%;
            
            padding-bottom: 100px;
            /* padding-top: 50px; */
        }

        #details_container {
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            width: 90%;
            margin: auto;
            gap: 20px;
        }
        .images_size {
            width: 100%;
            margin: auto;
            border-radius: 10px;
        }

        .card {
            border-radius: 10px;
            border: 1px solid rgb(187, 183, 183);
        }
        .details_text{
            padding-left: 20px;
        }
        .title{
            color: skyblue;
        }
        .job{
            color: gray;
        }
        #Secure_spot{
            width: 80%;
            margin: 0px auto;
            display: flex;
            justify-content: space-evenly;
        }
        .Secure_spot_container{
            border: 1px solid black;
            display: flex;
            flex-direction: column;
            border-radius: 10px;
            padding-left: 20px;
            padding-right: 20px;
            padding-bottom: 20px;
        }
        #Secure_spot_part2{
            background-color: #0d1b2a;
            color: white;
        }
        .Spot_button{
            padding: 10px;
            border-radius: 5px;
            border: none;
        }
        ul li::marker {

    color: #2563eb;

}

